syntax = "proto3";

package blog;

import "google/protobuf/empty.proto";

option go_package = "github.com/nandonyata/Clement-Jean-grpc-Udemy/blog/proto";

service BlogService {
    rpc CreateBlog (Blog) returns (BlogId);
    rpc GetOneBlog (BlogId) returns (Blog);
    rpc UpdateBlog (Blog) returns (google.protobuf.Empty);
    rpc DeleteBlog (BlogId) returns (google.protobuf.Empty);
    rpc GetAllBlog (google.protobuf.Empty) returns (stream Blog);
}

message Blog {
    string id = 1;
    string author_id= 2;
    string title = 3;
    string content = 4;
}

message BlogId {
    string id = 1;
}